# enterprise-ai-platform

./: .gitattributes  .gitignore  AI_CONTEXT.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py
apps/api/src/app/: __init__.py  main.py
apps/api/src/app/modules/: __init__.py
apps/api/src/app/modules/agents/: __init__.py
apps/api/src/app/modules/conversation/: __init__.py
apps/api/src/app/modules/identity/: __init__.py
apps/api/src/app/modules/knowledge/: __init__.py
apps/api/src/app/modules/mcp/: __init__.py
apps/api/src/app/modules/model_gateway/: __init__.py
apps/api/src/app/modules/prompts/: __init__.py
apps/api/src/app/modules/tooling/: __init__.py
apps/api/src/app/platform/: __init__.py  config.py  database.py  health.py
apps/api/tests/: test_health.py
apps/web/: package-lock.json
docs/architecture/: README.md
docs/plans/: 00-roadmap.md  release-01-architecture-and-foundation.md  release-01-arquitetura-e-fundacao.md  release-02-autenticacao-e-rbac.md  release-02-authentication-and-rbac.md  release-03-chat-and-streaming.md  release-03-chat-e-streaming.md  release-04-gateway-de-llms.md  release-04-llm-gateway.md  release-05-prompt-versioning.md  release-06-tool-calling.md  release-07-mcp.md  release-08-rag-and-vector-store.md  release-08-rag-e-banco-vetorial.md  release-09-agentes.md  release-09-agents.md  release-10-observabilidade.md  release-10-observability.md  (+4 more)
(+9 files in other folders)
